found all players heights except 3 by fixing names and checking joining code. Shot model needs to be remade (accidentally deleted but it was tracked here). Different schemes for height need to be considered.

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -16,13 +16,13 @@
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"ez\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"ez\", \"matrixStats\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
     "library(tidyverse)\n",
     "library(data.table)\n",
-    "#library(dtplyr)\n",
+    "library(dtplyr)\n",
     "#library(dplyr, warn.conflicts = FALSE)\n",
     "library(arrow)\n",
     "library(duckdb)\n",
@@ -31,7 +31,8 @@
     "library(dbscan)\n",
     "library(pROC)\n",
     "library(caTools)\n",
-    "library(ez)"
+    "library(ez)\n",
+    "library(matrixStats)"
    ]
   },
   {
@@ -61,32 +62,74 @@
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Lamarcus Aldridge\", \"LaMarcus Aldridge\")))\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Oj Mayo\", \"O.J. Mayo\")))\n",
     "#clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Cj Miles\", \"C.J. Miles\")))\n",
-    "clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Time Hardaway Jr\", \"Tim Hardaway Jr\")))\n",
-    "clean_shots <- clean_shots %>% mutate(across(where(is.character), ~ str_replace_all(., \"Steve Adams\", \"Steven Adams\")))\n",
-    "player_info <- player_info %>% mutate(across(where(is.character), ~ str_replace_all(., \"Luc Mbah\", \"Luc Mbah a Moute\")))\n",
     "\n",
+    "typos <- list(\n",
+    "    \"Time Hardaway Jr\" = \"Tim Hardaway Jr\",\n",
+    "    \"Steve Adams\" = \"Steven Adams\",\n",
+    "    \"Jose Juan Barea\" = \"Jj Barea\",\n",
+    "    \"Glen Rice Jr\" = \"Glen Rice\",\n",
+    "    \"Charles Hayes\" = \"Chuck Hayes\", # technically correct but more sources with chuck\n",
+    "    \"Ishmael Smith\" = \"Ish Smith\", # as above\n",
+    "    \"Patrick Mills\" = \"Patty Mills\", # etc\n",
+    "  #\"Luc Mbah\" = \"Luc Mbah A Moute\"\n",
+    "    \"Na Nene\" = \"Nene\"\n",
+    ")\n",
+    "\n",
+    "replace_strings <- function(df, replacements) {\n",
+    "  # Loop through the replacements\n",
+    "  df %>%\n",
+    "    mutate(across(where(is.character), ~{\n",
+    "      for (pattern in names(replacements)) {\n",
+    "        # Apply only the specific replacements, avoiding duplicate replacement\n",
+    "        . <- str_replace_all(., pattern, replacements[[pattern]])\n",
+    "      }\n",
+    "      .\n",
+    "    }))\n",
+    "}\n",
+    "\n",
+    "\n",
+    "clean_name <- function(name) {\n",
+    "  name %>%\n",
+    "    str_replace_all(\"-\", \" \") %>%\n",
+    "    str_replace_all(\"'\", \"\") %>%\n",
+    "    str_remove_all(\"\\\\.\") %>%\n",
+    "    str_to_title()\n",
+    "}\n",
     "\n",
     "\n",
     "\n",
     "player_info <- player_info %>%\n",
-    "    mutate(PLAYER_NAME = str_remove_all(PLAYER_NAME, \"\\\\.\")) %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
-    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n",
+    "    mutate(PLAYER_NAME = clean_name(PLAYER_NAME))\n",
     "\n",
+    "           \n",
     "clean_shots <- clean_shots %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"'\", \"\")) %>%\n",
-    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n",
+    "    mutate(PLAYER_NAME = clean_name(PLAYER_NAME),\n",
+    "          CLOSEST_DEFENDER = clean_name(CLOSEST_DEFENDER))\n",
     "\n",
+    "# shortcut usig slug col\n",
     "common_player_info <- common_player_info %>%\n",
     "    mutate(PLAYER_NAME = player_slug) %>%\n",
     "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
     "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n",
     "\n",
     "height_2014 <- height_2014 %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"-\", \" \")) %>%\n",
-    "    mutate(PLAYER_NAME = str_replace_all(PLAYER_NAME, \"'\", \"\")) %>%\n",
-    "    mutate(PLAYER_NAME = str_to_title(PLAYER_NAME))\n"
+    "    mutate(PLAYER_NAME = clean_name(PLAYER_NAME))\n",
+    "\n",
+    "\n",
+    "clean_shots <- replace_strings(clean_shots, typos)\n",
+    "player_info <- replace_strings(player_info, typos)\n",
+    "common_player_info <- replace_strings(common_player_info, typos)\n",
+    "height_2014 <- replace_strings(height_2014, typos)\n",
+    "\n",
+    "#explicit case because of his name and interactions with the regex\n",
+    "player_info <- player_info %>% mutate(across(where(is.character), ~ str_replace_all(., \"Luc Mbah\", \"Luc Mbah A Moute\")))\n",
+    "\n",
+    "# more explictit cases (for now)\n",
+    "height_2014 <- height_2014 %>% mutate(across(where(is.character), ~ str_replace_all(., \"Jose Barea\", \"Jj Barea\")))\n",
+    "\n",
+    "# in common_player_info there is a duplicate row for glen rice, and the younger is not called jr... So by hand:\n",
+    "\n",
+    "common_player_info <- common_player_info %>% filter(person_id != 779)"
    ]
   },
   {
@@ -254,86 +297,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3975da1-c20d-4d86-9dec-4742180e8a8a",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc3faab2",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
+   "id": "6b6b98bc-cd50-4684-9e6a-ce32e4b7146e",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "con <- DBI::dbConnect(\n",
-    "  duckdb::duckdb(), dbdir = \".tmp.duckdb\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "510d65c1-58c1-4ea5-92fb-1753c88cb282",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "duckdb_read_csv(con, name=\"play_by_play\", files=\"../Data/wyatt_basketball/csv/play_by_play.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43d50b73-6912-4ae0-abd9-4a431fcaa111",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "colnames(tbl(con, \"play_by_play\") %>% head(1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d59ca827",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "tbl(con, \"play_by_play\") %>% count(eventmsgtype) %>% collect()\n",
-    "tbl(con, \"play_by_play\") %>% filter(eventmsgtype == 1) %>% head(10) %>% collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4460fe32-cfaa-4564-92cd-dda2d74a2f73",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dbDisconnect(con, shutdown=TRUE)"
+    "convert_to_cm <- function(feet_inches) {\n",
+    "  split_height <- strsplit(feet_inches, \"-\")\n",
+    "  \n",
+    "  feet <- sapply(split_height, function(x) as.numeric(x[1]))\n",
+    "  inches <- sapply(split_height, function(x) as.numeric(x[2]))\n",
+    "  \n",
+    "  cm_height <- (feet * 30.48) + (inches * 2.54)\n",
+    "  \n",
+    "  return(cm_height)\n",
+    "}\n",
+    "convert_to_cm <- Vectorize(convert_to_cm)"
    ]
   },
   {
@@ -350,25 +328,59 @@
     "predictors <- c(\"PLAYER_NAME\", \"CLOSEST_DEFENDER\" ,\"SHOT_DIST\", \"PTS_TYPE\", \"CLOSE_DEF_DIST\", \"SHOT_CLOCK\", \"TOUCH_TIME\", \"PERIOD\", \"SUCCESS\")\n",
     "colnames(clean_shots)\n",
     "\n",
-    "player_height_pos_1 <- player_info %>%\n",
-    "    select(PLAYER_NAME, Height, Pos)\n",
+    "distinct_players_and_defenders <- union(\n",
+    "    clean_shots %>% distinct(PLAYER_NAME),\n",
+    "    clean_shots %>% distinct(CLOSEST_DEFENDER) %>% rename(PLAYER_NAME = CLOSEST_DEFENDER)\n",
+    ")\n",
     "\n",
-    "player_height_pos_2 <- common_player_info %>% #no position for now, working on this\n",
-    "    select(PLAYER_NAME, height, position)\n",
+    "player_height_pos <- distinct_players_and_defenders %>%\n",
+    "    left_join(player_info %>% select(PLAYER_NAME, Height, Pos), by=\"PLAYER_NAME\") %>%\n",
+    "    rename(H1 = Height)\n",
     "\n",
-    "player_height_3 <- height_2014 %>%\n",
-    "    select(PLAYER_NAME, \"Height(Feet-Inches)\")\n",
+    "player_height_pos <- player_height_pos %>%\n",
+    "    left_join(common_player_info %>% select(PLAYER_NAME, height, position), by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
+    "    rename(H2 = height)\n",
+    "   \n",
+    "player_height_pos <- player_height_pos %>%\n",
+    "    left_join(height_2014 %>% select(PLAYER_NAME, \"Height(Feet-Inches)\"), by=\"PLAYER_NAME\") %>%\n",
+    "    rename(H3 = \"Height(Feet-Inches)\") \n",
+    "# look at overlaps/ number of NAs in different height data now, then choose method to have only one col next\n",
+    "\n",
+    "\n",
+    "player_height_pos %>%\n",
+    "  group_by(PLAYER_NAME) %>%\n",
+    "  summarise(\n",
+    "    H1_na = any(is.na(H1)),\n",
+    "    H2_na = any(is.na(H2)),\n",
+    "    H3_na = any(is.na(H3)),\n",
+    "    H_all_na = all(is.na(H1) & is.na(H2) & is.na(H3))\n",
+    "  ) %>%\n",
+    "  summarise(\n",
+    "    H1_na_count = sum(H1_na),\n",
+    "    H2_na_count = sum(H2_na),\n",
+    "    H3_na_count = sum(H3_na),\n",
+    "    H_all_na_count = sum(H_all_na)\n",
+    "  )\n",
+    "\n",
+    "\n",
+    "player_height_pos <- player_height_pos %>%\n",
+    "    mutate(\n",
+    "    H2 = ifelse(!is.na(H2), convert_to_cm(H2), NA),\n",
+    "    H3 = ifelse(!is.na(H3), convert_to_cm(H3), NA),\n",
+    "    HEIGHT = case_when(\n",
+    "        !is.na(H1) ~ H1,\n",
+    "        is.na(H1) ~ rowMeans2(cbind(H2, H3), na.rm = TRUE),\n",
+    "        TRUE ~ NA_real_\n",
+    "    ))\n",
+    "\n",
     "\n",
     "model_data <- clean_shots %>% \n",
     "    select(all_of(predictors)) %>%\n",
-    "    left_join(player_height_pos_1, by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
-    "    rename(P1 = Pos, H1 = Height) %>%\n",
-    "    left_join(player_height_pos_2, by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
-    "    rename(P2 = position, H2 = height) %>%\n",
-    "    left_join(player_height_3, by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
-    "    rename(H3 = \"Height(Feet-Inches)\")\n",
-    "    #left_join(lookup_height_pos %>% rename(CLOSEST_DEFENDER = PLAYER_NAME), by=\"CLOSEST_DEFENDER\") %>%\n",
-    "    #rename(DEFENDER_POS = Pos, DEFENDER_HEIGHT = Height)\n",
+    "    left_join(player_height_pos %>% select(PLAYER_NAME, HEIGHT), by=\"PLAYER_NAME\", relationship = \"many-to-many\") %>%\n",
+    "    rename(SHOOTER_HEIGHT = HEIGHT) %>%\n",
+    "    left_join(player_height_pos %>% select(PLAYER_NAME, HEIGHT) %>% rename(CLOSEST_DEFENDER = PLAYER_NAME), \n",
+    "        by=\"CLOSEST_DEFENDER\", relationship = \"many-to-many\") %>%\n",
+    "    rename(DEFENDER_HEIGHT = HEIGHT)\n",
     "\n",
     "\n",
     "set.seed(0)\n",
@@ -386,43 +398,9 @@
     "#Brandan Wright not in player_info. Played for BOS and got traded to PHX at some point\n",
     "#Cody Zeller ... Played for Charlotte Bobcats\n",
     "\n",
-    "model_data %>%\n",
-    "  group_by(PLAYER_NAME) %>%\n",
-    "  summarise(\n",
-    "    H1_na = any(is.na(H1)),\n",
-    "    H2_na = any(is.na(H2)),\n",
-    "    H3_na = any(is.na(H3)),\n",
-    "    H_all_na = all(is.na(H1) & is.na(H2) & is.na(H3))\n",
-    "  ) %>%\n",
-    "  summarise(\n",
-    "    H1_na_count = sum(H1_na),\n",
-    "    H2_na_count = sum(H2_na),\n",
-    "    H3_na_count = sum(H3_na),\n",
-    "    H_all_na_count = sum(H_all_na)\n",
-    "  )\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "716a844f",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + SHOT_CLOCK + TOUCH_TIME, data=clean_shots, family=\"binomial\")\n",
-    "log_mm_model <- glmer(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + SHOT_CLOCK + TOUCH_TIME + PERIOD +\n",
-    "                      (SHOT_DIST | PLAYER_ID),\n",
-    "                    data = train_data,\n",
-    "                    family=binomial(link = \"logit\"))\n",
+    "model_data %>% filter(is.na(DEFENDER_HEIGHT)) %>% distinct(CLOSEST_DEFENDER)\n",
     "\n",
-    "summary(log_mm_model)\n",
-    "test_data$pred_prob <- predict(log_mm_model, type = \"response\", newdata=test_data)\n",
-    "roc(SUCCESS ~ pred_prob, data = test_data)"
+    "model_data %>% head(10)"
    ]
   },
   {
@@ -503,7 +481,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.1"
+   "version": "4.4.3"
   }
  },
  "nbformat": 4,
