experimenting with brms - uses 100% cpu and doesn't finish sampling

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"ez\", \"matrixStats\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"ez\", \"matrixStats\", \"brms\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
@@ -32,7 +32,8 @@
     "library(pROC)\n",
     "library(caTools)\n",
     "library(ez)\n",
-    "library(matrixStats)"
+    "library(matrixStats)\n",
+    "library(brms)"
    ]
   },
   {
@@ -298,7 +299,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6b6b98bc-cd50-4684-9e6a-ce32e4b7146e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "convert_to_cm <- function(feet_inches) {\n",
@@ -325,7 +330,7 @@
    },
    "outputs": [],
    "source": [
-    "predictors <- c(\"PLAYER_NAME\", \"CLOSEST_DEFENDER\" ,\"SHOT_DIST\", \"PTS_TYPE\", \"CLOSE_DEF_DIST\", \"SHOT_CLOCK\", \"TOUCH_TIME\", \"PERIOD\", \"SUCCESS\")\n",
+    "predictors <- c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\" ,\"SHOT_DIST\", \"PTS_TYPE\", \"CLOSE_DEF_DIST\", \"SHOT_CLOCK\", \"TOUCH_TIME\", \"PERIOD\", \"SUCCESS\")\n",
     "colnames(clean_shots)\n",
     "\n",
     "distinct_players_and_defenders <- union(\n",
@@ -380,13 +385,15 @@
     "    rename(SHOOTER_HEIGHT = HEIGHT) %>%\n",
     "    left_join(player_height_pos %>% select(PLAYER_NAME, HEIGHT) %>% rename(CLOSEST_DEFENDER = PLAYER_NAME), \n",
     "        by=\"CLOSEST_DEFENDER\", relationship = \"many-to-many\") %>%\n",
-    "    rename(DEFENDER_HEIGHT = HEIGHT)\n",
+    "    rename(DEFENDER_HEIGHT = HEIGHT) %>%\n",
+    "    mutate(SHOOTER_HEIGHT_ADV = SHOOTER_HEIGHT - DEFENDER_HEIGHT) %>%\n",
+    "    mutate(across(c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\", \"PERIOD\", \"SUCCESS\")))\n",
     "\n",
     "\n",
     "set.seed(0)\n",
     "train_indices <- sample(1:nrow(model_data), size = 0.70 * nrow(model_data))\n",
-    "train <- model_data[train_indices, ]\n",
-    "test <- model_data[-train_indices, ]\n",
+    "train_data <- model_data[train_indices, ]\n",
+    "test_data <- model_data[-train_indices, ]\n",
     "\n",
     "#dplyr::filter(clean_shots, grepl(\"Kyle\",PLAYER_NAME)) ## found issues with apostrophe in name of Kyle O'Quinn (was Oquinn)\n",
     "\n",
@@ -401,6 +408,42 @@
     "model_data %>% filter(is.na(DEFENDER_HEIGHT)) %>% distinct(CLOSEST_DEFENDER)\n",
     "\n",
     "model_data %>% head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceb64b51",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV, data=train_data, family=\"binomial\")\n",
+    "#log_mm_model <- glmer(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + SHOT_CLOCK + TOUCH_TIME + PERIOD +\n",
+    "#                      (1 | GAME_ID),\n",
+    "#                    data = train_data,\n",
+    "#                   family=binomial(link = \"logit\"))\n",
+    "#\n",
+    "#summary(log_mm_model)\n",
+    "#test_data$pred_prob <- predict(log_mm_model, type = \"response\", newdata=test_data)\n",
+    "#roc(SUCCESS ~ pred_prob, data = test_data)\n",
+    "#summary(log_model)\n",
+    "\n",
+    "brm_model <- brm(\n",
+    "  formula = SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV +\n",
+    "            SHOT_CLOCK + PTS_TYPE + PERIOD +\n",
+    "            (1 | PLAYER_NAME) + (1 | GAME_ID),\n",
+    "  data = train_data,\n",
+    "  family = bernoulli(),\n",
+    "  chains = 4,\n",
+    "  cores = 8,\n",
+    "  iter = 1000\n",
+    ")\n",
+    "\n",
+    "summary(brm_model)"
    ]
   },
   {
@@ -481,7 +524,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.3"
+   "version": "4.4.1"
   }
  },
  "nbformat": 4,
