--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -16,7 +16,7 @@
    },
    "outputs": [],
    "source": [
-    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"ez\", \"matrixStats\", \"brms\")\n",
+    "list.of.packages <- c(\"tidyverse\", \"data.table\", \"dtplyr\", \"arrow\", \"dbplyr\", \"duckdb\", \"lme4\", \"lmerTest\", \"dbscan\", \"pROC\", \"caTools\", \"ez\", \"matrixStats\", \"brms\" , \"glmnet\")\n",
     "new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,\"Package\"])]\n",
     "if(length(new.packages)) install.packages(new.packages)\n",
     "\n",
@@ -33,7 +33,8 @@
     "library(caTools)\n",
     "library(ez)\n",
     "library(matrixStats)\n",
-    "library(brms)"
+    "library(brms)\n",
+    "library(glmnet)"
    ]
   },
   {
@@ -387,7 +388,7 @@
     "        by=\"CLOSEST_DEFENDER\", relationship = \"many-to-many\") %>%\n",
     "    rename(DEFENDER_HEIGHT = HEIGHT) %>%\n",
     "    mutate(SHOOTER_HEIGHT_ADV = SHOOTER_HEIGHT - DEFENDER_HEIGHT) %>%\n",
-    "    mutate(across(c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\", \"PERIOD\", \"SUCCESS\")))\n",
+    "    mutate(across(c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\", \"PERIOD\", \"SUCCESS\"), as.factor))\n",
     "\n",
     "\n",
     "set.seed(0)\n",
@@ -421,7 +422,36 @@
    },
    "outputs": [],
    "source": [
-    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV, data=train_data, family=\"binomial\")\n",
+    "train_data <- train_data %>%\n",
+    "  mutate(\n",
+    "    SHOT_DIST = scale(SHOT_DIST),\n",
+    "    CLOSE_DEF_DIST = scale(CLOSE_DEF_DIST),\n",
+    "    TOUCH_TIME = scale(TOUCH_TIME),\n",
+    "    SHOOTER_HEIGHT_ADV = scale(SHOOTER_HEIGHT_ADV),\n",
+    "    SHOT_CLOCK = scale(SHOT_CLOCK)\n",
+    "    #PERIOD = scale(PERIOD)\n",
+    "  )\n",
+    "\n",
+    "test_data <- test_data %>%\n",
+    "  mutate(\n",
+    "    SHOT_DIST = scale(SHOT_DIST),\n",
+    "    CLOSE_DEF_DIST = scale(CLOSE_DEF_DIST),\n",
+    "    TOUCH_TIME = scale(TOUCH_TIME),\n",
+    "    SHOOTER_HEIGHT_ADV = scale(SHOOTER_HEIGHT_ADV),\n",
+    "    SHOT_CLOCK = scale(SHOT_CLOCK)\n",
+    "    #PERIOD = scale(PERIOD)\n",
+    "  )\n",
+    "\n",
+    "\n",
+    "\n",
+    "train_data <- na.omit(train_data)\n",
+    "test_data <- na.omit(test_data)\n",
+    "\n",
+    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE, data=train_data, family=\"binomial\")\n",
+    "\n",
+    "summary(log_model)\n",
+    "\n",
+    "\n",
     "#log_mm_model <- glmer(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + SHOT_CLOCK + TOUCH_TIME + PERIOD +\n",
     "#                      (1 | GAME_ID),\n",
     "#                    data = train_data,\n",
@@ -432,18 +462,51 @@
     "#roc(SUCCESS ~ pred_prob, data = test_data)\n",
     "#summary(log_model)\n",
     "\n",
-    "brm_model <- brm(\n",
-    "  formula = SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV +\n",
-    "            SHOT_CLOCK + PTS_TYPE + PERIOD +\n",
-    "            (1 | PLAYER_NAME) + (1 | GAME_ID),\n",
-    "  data = train_data,\n",
-    "  family = bernoulli(),\n",
-    "  chains = 4,\n",
-    "  cores = 8,\n",
-    "  iter = 1000\n",
-    ")\n",
+    "#brm_model <- brm(\n",
+    "#  formula = SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV +\n",
+    "#            SHOT_CLOCK + PTS_TYPE + (1 | PLAYER_NAME),\n",
+    "#  data = train_data,\n",
+    "#  family = bernoulli(),\n",
+    " # chains = 4,\n",
+    "#  cores = 8,\n",
+    "#  iter = 1000\n",
+    "#)\n",
     "\n",
-    "summary(brm_model)"
+    "\n",
+    "## the output will explode if you put GAME_ID or PLAYER_NAME in here \n",
+    "x_train <- model.matrix(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE, data = train_data)[, -1]\n",
+    "y_train <- train_data$SUCCESS\n",
+    "\n",
+    "x_test <- model.matrix(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE, data = test_data)[, -1]\n",
+    "y_test <- test_data$SUCCESS\n",
+    "\n",
+    "cv.out <- cv.glmnet(x_train, y_train, family = \"binomial\", alpha = 1, type.measure = \"mse\")\n",
+    "plot(cv.out)\n",
+    "lambda_opt <- cv.out$lambda.1se\n",
+    "\n",
+    "log_lasso_model <- glmnet(x_train, y_train, family = \"binomial\", alpha=1, lambda=lambda_opt)\n",
+    "\n",
+    "pred_prob <- predict(log_lasso_model, s=lambda_opt, newx = x_test, type=\"response\")\n",
+    "\n",
+    "roc_obj <- roc(y_test, as.vector(pred_prob))\n",
+    "\n",
+    "ggroc(roc_obj, color = \"blue\", size = 1.2) +\n",
+    "  theme_minimal(base_size = 14) +  # Clean white background\n",
+    "  labs(\n",
+    "    title = \"ROC Curve\",\n",
+    "    x = \"1 - Specificity (False Positive Rate)\",\n",
+    "    y = \"Sensitivity (True Positive Rate)\"\n",
+    "  ) +\n",
+    "  annotate(\"text\", x = 0.75, y = 0.25,\n",
+    "           label = paste(\"AUC =\", round(auc(roc_obj), 3)),\n",
+    "           size = 5) +\n",
+    "  theme(\n",
+    "    panel.grid.minor = element_blank(),\n",
+    "    panel.grid.major = element_line(color = \"grey90\"),\n",
+    "    plot.title = element_text(hjust = 0.5, face = \"bold\")\n",
+    "  )\n",
+    "\n",
+    "log_lasso_model$beta"
    ]
   },
   {
