Lasso, mixed effects, and standard logistic model working. Mixed and standard have residual plots. Lasso should be reimplemented in caret for simplicity

--- a/notebooks/NBA_shots_AML.ipynb
+++ b/notebooks/NBA_shots_AML.ipynb
@@ -388,7 +388,8 @@
     "        by=\"CLOSEST_DEFENDER\", relationship = \"many-to-many\") %>%\n",
     "    rename(DEFENDER_HEIGHT = HEIGHT) %>%\n",
     "    mutate(SHOOTER_HEIGHT_ADV = SHOOTER_HEIGHT - DEFENDER_HEIGHT) %>%\n",
-    "    mutate(across(c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\", \"PERIOD\", \"SUCCESS\"), as.factor))\n",
+    "    filter(PERIOD <= 4) %>%\n",
+    "    mutate(across(c(\"GAME_ID\", \"PLAYER_NAME\", \"CLOSEST_DEFENDER\", \"PERIOD\", \"SUCCESS\", \"PTS_TYPE\"), as.factor))\n",
     "\n",
     "\n",
     "set.seed(0)\n",
@@ -408,7 +409,7 @@
     "\n",
     "model_data %>% filter(is.na(DEFENDER_HEIGHT)) %>% distinct(CLOSEST_DEFENDER)\n",
     "\n",
-    "model_data %>% head(10)"
+    "model_data %>% filter(PTS_TYPE == 3) %>% head(10)"
    ]
   },
   {
@@ -429,7 +430,6 @@
     "    TOUCH_TIME = scale(TOUCH_TIME),\n",
     "    SHOOTER_HEIGHT_ADV = scale(SHOOTER_HEIGHT_ADV),\n",
     "    SHOT_CLOCK = scale(SHOT_CLOCK)\n",
-    "    #PERIOD = scale(PERIOD)\n",
     "  )\n",
     "\n",
     "test_data <- test_data %>%\n",
@@ -439,7 +439,6 @@
     "    TOUCH_TIME = scale(TOUCH_TIME),\n",
     "    SHOOTER_HEIGHT_ADV = scale(SHOOTER_HEIGHT_ADV),\n",
     "    SHOT_CLOCK = scale(SHOT_CLOCK)\n",
-    "    #PERIOD = scale(PERIOD)\n",
     "  )\n",
     "\n",
     "\n",
@@ -447,30 +446,32 @@
     "train_data <- na.omit(train_data)\n",
     "test_data <- na.omit(test_data)\n",
     "\n",
-    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE, data=train_data, family=\"binomial\")\n",
+    "log_model <- glm(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE, \n",
+    "                 data=train_data, family=binomial(link=\"logit\"))\n",
     "\n",
     "summary(log_model)\n",
     "\n",
     "\n",
-    "#log_mm_model <- glmer(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + SHOT_CLOCK + TOUCH_TIME + PERIOD +\n",
-    "#                      (1 | GAME_ID),\n",
-    "#                    data = train_data,\n",
-    "#                   family=binomial(link = \"logit\"))\n",
-    "#\n",
-    "#summary(log_mm_model)\n",
+    "log_mixed_model <- glmer(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE\n",
+    "                         + (1 | GAME_ID) + (1 | PLAYER_NAME),\n",
+    "                    data = train_data,\n",
+    "                   family=binomial(link = \"logit\"),\n",
+    "                        nAGQ = 0)\n",
+    "\n",
+    "#summary(log_mixed_model)\n",
     "#test_data$pred_prob <- predict(log_mm_model, type = \"response\", newdata=test_data)\n",
     "#roc(SUCCESS ~ pred_prob, data = test_data)\n",
     "#summary(log_model)\n",
     "\n",
     "#brm_model <- brm(\n",
-    "#  formula = SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV +\n",
+    "#    formula = SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV +\n",
     "#            SHOT_CLOCK + PTS_TYPE + (1 | PLAYER_NAME),\n",
-    "#  data = train_data,\n",
-    "#  family = bernoulli(),\n",
-    " # chains = 4,\n",
-    "#  cores = 8,\n",
-    "#  iter = 1000\n",
-    "#)\n",
+    "#    data = train_data,\n",
+    "#    family = bernoulli(),\n",
+    "#    chains = 4,\n",
+    "#    cores = 4,\n",
+    "#    iter = 100\n",
+    "#    )\n",
     "\n",
     "\n",
     "## the output will explode if you put GAME_ID or PLAYER_NAME in here \n",
@@ -480,33 +481,72 @@
     "x_test <- model.matrix(SUCCESS ~ SHOT_DIST + CLOSE_DEF_DIST + TOUCH_TIME + SHOOTER_HEIGHT_ADV + PERIOD + SHOT_CLOCK + PTS_TYPE, data = test_data)[, -1]\n",
     "y_test <- test_data$SUCCESS\n",
     "\n",
-    "cv.out <- cv.glmnet(x_train, y_train, family = \"binomial\", alpha = 1, type.measure = \"mse\")\n",
+    "cv.out <- cv.glmnet(x_train, y_train, family = \"binomial\", alpha = 1, type.measure = \"auc\")\n",
     "plot(cv.out)\n",
-    "lambda_opt <- cv.out$lambda.1se\n",
+    "lambda_opt <- cv.out$lambda.min\n",
     "\n",
-    "log_lasso_model <- glmnet(x_train, y_train, family = \"binomial\", alpha=1, lambda=lambda_opt)\n",
-    "\n",
-    "pred_prob <- predict(log_lasso_model, s=lambda_opt, newx = x_test, type=\"response\")\n",
-    "\n",
-    "roc_obj <- roc(y_test, as.vector(pred_prob))\n",
-    "\n",
-    "ggroc(roc_obj, color = \"blue\", size = 1.2) +\n",
-    "  theme_minimal(base_size = 14) +  # Clean white background\n",
-    "  labs(\n",
-    "    title = \"ROC Curve\",\n",
-    "    x = \"1 - Specificity (False Positive Rate)\",\n",
-    "    y = \"Sensitivity (True Positive Rate)\"\n",
-    "  ) +\n",
-    "  annotate(\"text\", x = 0.75, y = 0.25,\n",
-    "           label = paste(\"AUC =\", round(auc(roc_obj), 3)),\n",
-    "           size = 5) +\n",
-    "  theme(\n",
-    "    panel.grid.minor = element_blank(),\n",
-    "    panel.grid.major = element_line(color = \"grey90\"),\n",
-    "    plot.title = element_text(hjust = 0.5, face = \"bold\")\n",
-    "  )\n",
-    "\n",
+    "log_lasso_model <- glmnet(x_train, y_train, family = \"binomial\", alpha=1, lambda=lambda_opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64954be-36f8-41b0-ba9a-e59f46970ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary(log_model)\n",
+    "summary(log_mixed_model)\n",
+    "summary(log_lasso_model)\n",
     "log_lasso_model$beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6269ddb0-2b1d-48d6-b5b2-e3d518dc1945",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_auroc <- function(model, test_data) {\n",
+    "    pred_prob <- predict(model, newdata = test_data, type=\"response\")\n",
+    "    roc_obj <- roc(test_data$SUCCESS, as.vector(pred_prob), ci=TRUE)\n",
+    "    return(roc_obj)\n",
+    "}\n",
+    "\n",
+    "residual_deviance_plot <- function(model, title_str) {\n",
+    "    plot_data <- data.frame(\n",
+    "        fitted = fitted(model),\n",
+    "        residuals = residuals(model, type = \"deviance\")\n",
+    "    )\n",
+    "    \n",
+    "    resid_plot <- ggplot(plot_data, aes(x = fitted, y = residuals)) +\n",
+    "    geom_point(alpha = 0.3, size = 0.8) +\n",
+    "    geom_hline(yintercept = 0, color = \"red\", linetype = \"dashed\") + \n",
+    "    geom_smooth() +\n",
+    "    labs(\n",
+    "        title = paste0(title_str, \": Residuals vs Fitted\"),\n",
+    "        subtitle = \"Deviance residuals plotted against predicted probabilities\",\n",
+    "        x = \"Fitted values (predicted probabilities)\",\n",
+    "        y = \"Deviance residuals\"\n",
+    "    ) +\n",
+    "    theme_bw() +\n",
+    "    theme(\n",
+    "        panel.grid.minor = element_blank(),\n",
+    "        panel.grid.major = element_line(color = \"grey90\"),\n",
+    "        plot.title = element_text(hjust = 0.5, face = \"bold\"),\n",
+    "        plot.subtitle = element_text(hjust = 0.5, color = \"darkgrey\")\n",
+    "    )\n",
+    "    return(resid_plot)\n",
+    "}\n",
+    "\n",
+    "model_auroc(log_model, test_data)$ci\n",
+    "model_auroc(log_mixed_model, test_data)$ci\n",
+    "pred_prob <- predict(log_lasso_model, newx = x_test, type=\"response\")\n",
+    "roc(y_test, as.vector(pred_prob), ci=TRUE)$ci\n",
+    "\n",
+    "residual_deviance_plot(log_model, \"Logistc model\")\n",
+    "residual_deviance_plot(log_mixed_model, \"Logistic mixed-effects\")"
    ]
   },
   {
@@ -521,7 +561,8 @@
    "outputs": [],
    "source": [
     "ggplot(clean_shots, aes(x=SHOT_DIST, y=TOUCH_TIME)) + \n",
-    "    geom_point()"
+    "    geom_point()\n",
+    "cor(model_data %>% select(SHOT_DIST, SHOT_CLOCK, TOUCH_TIME, CLOSE_DEF_DIST))"
    ]
   },
   {
@@ -587,7 +628,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.4.1"
+   "version": "4.4.3"
   }
  },
  "nbformat": 4,
